// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form empty 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  className="c0"
>
  <form
    onReset={[Function]}
    onSubmit={[Function]}
  />
</div>
`;

exports[`Form regexp validation 1`] = `
.c0 {
  margin-left: 8px;
  margin-right: 8px;
  margin-top: 4px;
  margin-bottom: 4px;
  font-size: 12px;
  line-height: 16px;
  color: #e35e59;
}

<span
  class="c0"
>
  invalid
</span>
`;

exports[`Form required validation 1`] = `
.c0 {
  margin-left: 8px;
  margin-right: 8px;
  margin-top: 4px;
  margin-bottom: 4px;
  font-size: 12px;
  line-height: 16px;
  color: #e35e59;
}

<span
  class="c0"
>
  required
</span>
`;

exports[`Form update 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin-bottom: 8px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  border-bottom: solid 0 rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #E15151;
  border-radius: 4px;
  color: #444444;
  padding: 2px 14px;
  font-size: 12px;
  line-height: 16px;
  background: #E15151;
  color: #f8f8f8;
  border-radius: 4px;
  -webkit-transition-property: color, background-color, border-color, box-shadow;
  transition-property: color, background-color, border-color, box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c5:hover {
  box-shadow: 0px 0px 0px 2px #E15151;
}

.c4 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  padding: 7px;
  outline: none;
  background: transparent;
  color: inherit;
  font-weight: 400;
  margin: 0;
  border: 1px solid rgba(0,0,0,0.33);
  border-radius: 0px;
  width: 100%;
}

.c4::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c4::-webkit-input-placeholder {
  color: #e0e4ee;
}

.c4::-moz-placeholder {
  color: #e0e4ee;
}

.c4:-ms-input-placeholder {
  color: #e0e4ee;
}

.c4::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width:512px) {
  .c1 {
    margin-bottom: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    border-bottom: solid 0 rgba(0,0,0,0.33);
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 "
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <input
            autocomplete="off"
            class="c4"
            name="test"
            placeholder="test input"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="c1 "
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <input
            autocomplete="off"
            class="c4"
            name="test2"
            placeholder="test-2 input"
            value=""
          />
        </div>
      </div>
    </div>
    <button
      class="c5"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form with field 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  margin-bottom: 8px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  border-bottom: solid 0 rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  padding: 7px;
  outline: none;
  background: transparent;
  color: inherit;
  font-weight: 400;
  margin: 0;
  border: 1px solid rgba(0,0,0,0.33);
  border-radius: 0px;
  width: 100%;
}

.c4::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c4::-webkit-input-placeholder {
  color: #e0e4ee;
}

.c4::-moz-placeholder {
  color: #e0e4ee;
}

.c4:-ms-input-placeholder {
  color: #e0e4ee;
}

.c4::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width:512px) {
  .c1 {
    margin-bottom: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    border-bottom: solid 0 rgba(0,0,0,0.33);
  }
}

<div
  className="c0"
>
  <form
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="c1 "
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <input
            autoComplete="off"
            className="c4"
            name="test"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            value=""
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;
